--- a/index.html
+++ b/index.html
@@ -44,6 +44,32 @@
 			</div>
 
 		</section>
+
+		<!-- about-section -->
+		<section class="about">
+			<div class="about-image">
+				<h5>Minimal</h5>
+				<img src="./img/about-image.png" alt="about-section-image">
+			</div>
+			<div class="about-text flex">
+				<h2>Elena Joy</h2>
+				<div class="about-life">
+					<h3>My Life</h3>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga esse nam ut ipsam doloribus neque,
+						consectetur in fugiat eveniet vitae!</p>
+				</div>
+				<div class="about-work">
+					<h3>My Work</h3>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga esse nam ut ipsam doloribus neque,
+						consectetur in fugiat eveniet vitae!</p>
+				</div>
+				<div class="about-contact">
+					<h3>Get in Touch</h3>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga esse nam ut ipsam doloribus neque,
+						consectetur in fugiat eveniet vitae!</p>
+				</div>
+			</div>
+		</section>
 	</main>
 
 </body>
