--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- Gallery-section -->
+		<section class="gallery">
+			<div class="gallery-head">
+				<h2>Quality Photography</h2>
+				<p>Awesome collection of my work</p>
+			</div>
+			<img class="gallery1" src="./img/gallery-1.jpg" alt="men in suit">
+			<img class="gallery2" src="./img/gallery-2.jpg" alt="lady in coat">
+			<img class="gallery3" src="./img/gallery-3.jpg" alt="lady in t-shirt">
+			<img class="gallery4" src="./img/gallery-4.jpg" alt="lady in jacket">
+		</section>
 	</main>
 
 </body>
