--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<header class="main-head">
 		<nav>
 			<h1 id="logo">Elena-Joy</h1>
-			<input type="checkbox" class="menu-check">
 			<ul class="nav-links">
 				<li><a href="#about">About</a></li>
 				<li><a href="#work">Work</a></li>
@@ -21,9 +20,9 @@
 			</ul>
 			<!-- burger-menu -->
 			<div class="burger">
-				<span></span>
-				<span></span>
-				<span></span>
+				<span class="line1"></span>
+				<span class="line2"></span>
+				<span class="line3"></span>
 			</div>
 		</nav>
 	</header>
@@ -46,7 +45,7 @@
 		</section>
 
 		<!-- about-section -->
-		<section class="about">
+		<section class="about" id="about">
 			<div class="about-image">
 				<h5>Minimal</h5>
 				<img src="./img/about-image.png" alt="about-section-image">
@@ -72,7 +71,7 @@
 		</section>
 
 		<!-- Gallery-section -->
-		<section class="gallery">
+		<section class="gallery" id="work">
 			<div class="gallery-head">
 				<h2>Quality Photography</h2>
 				<p>Awesome collection of my work</p>
@@ -82,7 +81,33 @@
 			<img class="gallery3" src="./img/gallery-3.jpg" alt="lady in t-shirt">
 			<img class="gallery4" src="./img/gallery-4.jpg" alt="lady in jacket">
 		</section>
+
+		<!-- contact section -->
+		<section class="contact" id="contact">
+			<div class="form-wrapper flex">
+				<h2>Get in <br />
+					<span>Touch</span>
+				</h2>
+				<form>
+					<label for="email">Email</label>
+					<input type="email" name="email" id="email">
+					<button type="submit">Submit</button>
+				</form>
+			</div>
+			<img src="./img/contact-image.jpg" alt=" Elena-Joy">
+		</section>
 	</main>
+	<!-- footer -->
+	<footer>
+		<h4>Elena-Joy &copy; 2020</h4>
+		<ul>
+			<li><a href="#"><img src="./img/instagram 1.svg" alt="instagram-link"></a></li>
+			<li><a href="#"><img src="./img/twitter 1.svg" alt="twitter"></a></li>
+			<li><a href="#"></a><img src="./img/youtube-symbol 1.svg" alt="youtube-link"></li>
+		</ul>
+	</footer>
+
+	<script src="index.js"></script>
 
 </body>
 
