--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="A Professional website for Elena joy to showcase her portfolio">
 	<link rel="stylesheet" href="style.css">
-	<title>Elena-Joy || Photography-website</title>
+	<title>Elena-Joy || Photography-cool-website</title>
 </head>
 
 <body>
