Footer-fix :octocat:

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	</main>
 	<!-- footer -->
 	<footer>
-		<h4>Elena-Joy &copy; 2020</h4>
+		<h4>F.X Blankson &copy; 2020</h4>
 		<ul>
 			<li><a href="#"><img src="./img/instagram 1.svg" alt="instagram-link"></a></li>
 			<li><a href="#"><img src="./img/twitter 1.svg" alt="twitter"></a></li>
